@@ -4,6 +4,7 @@ Kiwix 0.9 beta3
 * Selectable title and description in the content manager (ID: 3390514)
 * Fix buggy history behaviour by opening external urls
 * Implement ctrl+[PAGE_UP|PAGE_DOWN] to navigate in tabs
+* Fix different issue impacting keypress event mgmt on Tabs
 
 Kiwix 0.9 beta2
 * Regression fix, tabs should not be visible per default
